--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 test.tt
 CartoGothicStd-*
 .DS_Store
+/base.xml
+/menu-ui.xml
+/recordings-ui.xml
+/schedule-ui.xml
+/themeinfo.xml
+/video-ui.xml
+/oldimages/ultra_wide_button_background.png
+/oldimages/ultra_wide_button_selected_background-1.png
+/oldimages/ultra_wide_button_selected_background-1.psd
+/oldimages/ultra_wide_button_selected_background.png
+/oldimages/very_wide_button_background.psd
