added some more ignores

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ CartoGothicStd-*
 /oldimages/ultra_wide_button_selected_background-1.psd
 /oldimages/ultra_wide_button_selected_background.png
 /oldimages/very_wide_button_background.psd
+/ultra_wide_button_selected_background.psd
